--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   "author": "Lan Nguyen",
   "license": "ISC",
   "dependencies": {
+    "co-busboy": "^1.3.1",
     "koa": "^1.1.2",
+    "koa-body": "^1.4.0",
     "koa-bodyparser": "^2.0.1",
+    "koa-logger": "^1.3.0",
+    "koa-multer": "^1.0.0",
     "koa-route": "^2.4.2",
     "koa-router": "^5.3.0",
+    "koa-static": "^1.5.2",
     "lodash": "^3.10.1",
     "thenify": "^3.1.1"
   }
