--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "koa-bodyparser": "^2.0.1",
     "koa-logger": "^1.3.0",
     "koa-multer": "^1.0.0",
+    "koa-request": "^1.0.0",
     "koa-route": "^2.4.2",
     "koa-router": "^5.3.0",
     "koa-static": "^1.5.2",
     "lodash": "^3.10.1",
+    "request": "^2.67.0",
     "thenify": "^3.1.1"
   }
 }
